# edoc

./: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  configure.ac
data/desktop/: Makefile.am  edoc.desktop.in
doc/: Makefile.am  edoc.1.in
po/: POTFILES.in
src/lib/: Makefile.am  edoc.c  edoc.h  edoc_private.h
src/tests/: Makefile.am  test_edoc.c
